[project]
name = "dti5125-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy==2.2",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]
