[project]
name = "dti5125-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.0",
    "einops>=0.8.1",
    "evoc>=0.1.3",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy==2.2",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pythreejs>=2.4.2",
    "pyvista[notebook]>=0.45.2",
    "pyvistaqt>=0.11.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "trame<3",
    "umap>=0.1.1",
    "umap-learn>=0.5.7",
]
